src/objects/loan__Loan_Payment_Transaction__c.object
<CustomObject>
    <description>Loan Payment Transaction</description>
    <fields>
        <fullName>Authorization_Code__c</fullName>
        <label>Authorization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Email__c</fullName>
        <label>Borrower Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Datacash_Reference__c</fullName>
        <label>Datacash Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Reference__c</fullName>
        <label>Merchant Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction_Id__c</fullName>
        <formula>&apos;PTID-&apos; + Text(value( 

(left(right(text(now()),6),2))&amp; 

text(DAY(DATEVALUE(now())))&amp; 

text(Month(DATEVALUE(now())))&amp; 

text(Year(DATEVALUE(now())))&amp; 

(left(right(text(now()),9),2))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Transaction Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Retry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receivables__c</fullName>
        <formula>loan__Loan_Account__r.loan__Principal_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receivables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refund_Processed_On__c</fullName>
        <label>Refund Processed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refunded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Filename__c</fullName>
        <label>ACH Filename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Affected_Installment_Ids__c</fullName>
        <label>Affected Installment Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Automated_Payment_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Automated Payment Setup</label>
        <referenceTo>loan__Automated_Payment_Setup__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Balance_s_Snapshot__c</fullName>
        <label>Balance&apos;s Snapshot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Name__c</fullName>
        <description>Name of the bank to which the check belongs</description>
        <inlineHelpText>Name of the bank to which the check belongs</inlineHelpText>
        <label>Bank Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Borrower_Email__c</fullName>
        <label>Borrower Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>loan__Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check</label>
        <referenceTo>loan__Check__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Cheque_Date__c</fullName>
        <description>Date of the cheque submitted</description>
        <inlineHelpText>Date of the cheque submitted</inlineHelpText>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Cheque_Number__c</fullName>
        <description>Captures the check number or transaction reference</description>
        <inlineHelpText>Captures the check number or transaction reference</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Cleared_Reversal_Txn_Count__c</fullName>
        <label>Cleared Reversal Txn Count</label>
        <summaryFilterItems>
            <field>loan__Repayment_Transaction_Adjustment__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Repayment_Transaction_Adjustment__c.loan__Loan_Payment_Transaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this loan payment transaction is supervised or not.</description>
        <inlineHelpText>Indicates if this loan payment transaction is supervised or not.</inlineHelpText>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Clearing_Date__c</fullName>
        <label>Clearing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Consolidated_Loan_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidated Loan Payment</label>
        <referenceTo>loan__Consolidated_Loan_Payment__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Custom_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Payment Processing Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Dependent_Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Dues_Snapshot__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Dues Snapshot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Early_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment before the scheduled Payment Date</description>
        <inlineHelpText>Payment before the scheduled Payment Date</inlineHelpText>
        <label>Early Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Early_Total_Repayment_of_the_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>After a loan is disbursed, a client can at any time repay the loan in a single payment. 
he system calculates the total amount due as of the current date, including principal, interest, fees and penalties.</description>
        <inlineHelpText>After a loan is disbursed, a client can at any time repay the loan in a single payment. 
the system calculates the total amount due as of the current date, including principal, interest, fees and penalties.</inlineHelpText>
        <label>Pay-Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Excess__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Snapshot__c</fullName>
        <description>This field stores an encrypted string of all paid &apos;Overdue Fees&apos; and &apos;Charges&apos;. No need to add &apos;Due Fees&apos; because it is being recorded as a part of &apos;Installment Snapshot&apos; field on the installment.</description>
        <inlineHelpText>This field stores an encrypted string of all paid &apos;Overdue Fees&apos; and &apos;Charges&apos;. No need to add &apos;Due Fees&apos; because it is being recorded as a part of &apos;Installment Snapshot&apos; field on the installment.</inlineHelpText>
        <label>Fee Snapshot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees component for this payment</description>
        <inlineHelpText>This is the fees amount collected for the loan</inlineHelpText>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest component for this payment.</description>
        <inlineHelpText>This is the Interest amount collected for the loan</inlineHelpText>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Late_Charge_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Late Charge (Interest)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Late_Charge_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Late Charge (Principal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <description>Loan Account</description>
        <inlineHelpText>Loan Account</inlineHelpText>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Snapshot__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Loan Snapshot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Manual_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Missed_Loan_Installment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Missed Loan Installment</description>
        <inlineHelpText>Missed Loan Installment</inlineHelpText>
        <label>Missed Loan Installment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Other_Charges_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges (Interest)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Other_Charges_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges (Principal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid_to_Broker_Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid to Broker Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Paid_to_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To track whether this payment has been paid to Broker or not.</description>
        <label>Paid to Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Paid_to_Investor_Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid to Investor Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Paid_to_Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To track whether this payment has been paid to investor or not.</description>
        <label>Paid to Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Partial_Payment_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Read only field. Checked when the payment is less than scheduled.</description>
        <inlineHelpText>Read only field. Checked when the payment is less than scheduled.</inlineHelpText>
        <label>Partial Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Application_Mode__c</fullName>
        <description>If the value is Future Dues, Reserve Amount For Next Due will be used for satisfying Bills. Otherwise, Reserve Amount For Next Due will not be used for satisfying Bills.</description>
        <inlineHelpText>Possible values are 
1) Future Dues 
2) Current Dues 
Future Dues is used when Loan Payments should be used to satisfy future dues. 
Current Dues is used when Loan Payments should only be used to satisfy present dues.</inlineHelpText>
        <label>Payment Application Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Future Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Dues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Payment_Mode__c.Name</field>
                <operation>notEqual</operation>
                <value>Internal Transfer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Principal amount collected for the loan</inlineHelpText>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Receipt_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <description>Receipt Date</description>
        <inlineHelpText>Receipt Date</inlineHelpText>
        <label>Receipt Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Receipt_ID__c</fullName>
        <description>Receipt ID</description>
        <displayFormat>RTRID-{0000000000}</displayFormat>
        <inlineHelpText>Receipt ID</inlineHelpText>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Refinance_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Refinance Transaction settled by this Pay-off Transaction</inlineHelpText>
        <label>Refinance Transaction</label>
        <referenceTo>loan__Refinance_Transaction__c</referenceTo>
        <relationshipLabel>Pay-Off Transactions</relationshipLabel>
        <relationshipName>Refinance_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reversal_Reason__c</fullName>
        <label>Reversal Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH_On__c</fullName>
        <inlineHelpText>This is the date the transaction was sent to ACH. The lock period for clearing is counted from this date.</inlineHelpText>
        <label>Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Sent_to_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Total_Charges_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Charges (Interest)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Charges_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Charges (Principal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <description>Transaction Amount</description>
        <inlineHelpText>This is the sum of Interest, Principal and Fees</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <description>Transaction Date</description>
        <inlineHelpText>Transaction Date</inlineHelpText>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Time__c</fullName>
        <label>Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Write_Off_Recovery_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this only if you wish to recover payments for written off loans</inlineHelpText>
        <label>Write Off Recovery Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>loan__Bank__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Create_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Dishonor_Fee_Journal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dishonor Fee Journal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Dishonor_Fee_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dishonor Fee Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Dishonor_Fee_Reversal_Journal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dishonor Fee Reversal Journal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Dishonor_Fee_Reversal_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dishonor Fee Reversal Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions (Dishonor Fee Reversal Journal)</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Late_Fee_Journal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Fee Journal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Late_Fee_Journal_FFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Late Fee Journal (FFA)</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions (Late Fee Journal (FFA))</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Late_Fee_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Late Fee Journal (Deprecated)</label>
        <referenceTo>loan__Journal__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Late_Fee_Reversal_Journal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Fee Reversal Journal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Late_Fee_Reversal_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Late Fee Reversal Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions (Late Fee Reversal Journal)</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__BTransaction_Hash__c</fullName>
        <label>BTransaction Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Reference__c</fullName>
        <label>Bank Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Statement_Date__c</fullName>
        <label>Bank Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Statement_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statement Exception</label>
        <referenceTo>peer__Bank_Recon_Exception__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Loan_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the Loan Payment Transaction is for loan cancellation.</description>
        <inlineHelpText>If true, the Loan Payment Transaction is for loan cancellation.</inlineHelpText>
        <label>Loan Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Verification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verification</label>
        <referenceTo>peer__Verification__c</referenceTo>
        <relationshipLabel>Loan Payment Transactions</relationshipLabel>
        <relationshipName>Loan_Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Verified_From_Bank_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is checked when Loan Payment record is verified from Bank Recon file.</description>
        <inlineHelpText>Field will be checked automatically after verification from bank statement.</inlineHelpText>
        <label>Verified From Bank Statement</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Payment Transaction</label>
    <nameField>
        <displayFormat>LPT-{000000000}</displayFormat>
        <label>Loan Payment Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Backdated_Payment_date_check</fullName>
        <active>false</active>
        <description>Backdated payment should not go before contract date.</description>
        <errorConditionFormula>loan__Transaction_Date__c &lt;  loan__Loan_Account__r.loan__Disbursal_Date__c</errorConditionFormula>
        <errorDisplayField>loan__Transaction_Date__c</errorDisplayField>
        <errorMessage>Transaction date should be after contract date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Check_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Transaction_Amount__c !=  loan__Check__r.loan__Check_Amount__c</errorConditionFormula>
        <errorMessage>Transaction amount does not match the check amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Payment_Mode</fullName>
        <active>false</active>
        <errorConditionFormula>loan__Payment_Mode__r.Name  =  &apos;Check&apos; &amp;&amp; ISBLANK( loan__Check__c )</errorConditionFormula>
        <errorMessage>Please input a check.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Cheque_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Payment_Mode__r.Name  = &apos;Cheque&apos;  &amp;&amp;  ISBLANK( loan__Cheque_Number__c )</errorConditionFormula>
        <errorMessage>Cheque Number can&apos;t be blank if payment mode is Cheque.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Invalid_State_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Loan_Account__r.loan__Invalid_Data__c</errorConditionFormula>
        <errorMessage>Loan is in invalid state via an unexpected event. Please contact Cloud Lending support before posting this payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Loan_Disbursal_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( loan__Loan_Account__r.loan__Disbursal_Date__c ) ||  ISNULL( loan__Loan_Account__r.loan__Disbursal_Date__c )</errorConditionFormula>
        <errorMessage>This loan is not disbursed yet. You cannot record payment transaction.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Loan_Status_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; (TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Partial Application&apos; || TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Pending Approval&apos; || TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Canceled&apos; || 
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Closed - Rescheduled&apos; || 
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Disbursed to LO&apos; || 
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Partial Application&apos;)</errorConditionFormula>
        <errorMessage>Invalid Loan Status. You cannot record a repayment transaction for this loan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Manual_Payment_Fees_Check</fullName>
        <active>false</active>
        <description>This is deprecated and not maintained.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; loan__Manual_Payment__c &amp;&amp;  (ROUND(loan__Fees__c,2) &gt;   ROUND(loan__Loan_Account__r.loan__Fees_Remaining__c,2)  )</errorConditionFormula>
        <errorMessage>Fee component cannot be greater than &apos;Remaining Fees&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Manual_Payment_Principal_Check</fullName>
        <active>false</active>
        <description>This is deprecated and not maintained.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; loan__Manual_Payment__c &amp;&amp;  (ROUND(loan__Principal__c,2) &gt;  ROUND(loan__Loan_Account__r.loan__Principal_Remaining__c,2) )</errorConditionFormula>
        <errorMessage>Principal component cannot be greater than &apos;Remaining Principal&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Manual_Payment_Transaction_Amount_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; loan__Manual_Payment__c &amp;&amp;  (  ROUND(loan__Transaction_Amount__c,2)   !=   ( ROUND(loan__Fees__c,2)  +  ROUND(loan__Interest__c,2)  +  ROUND(loan__Principal__c,2) + ROUND(loan__Excess__c,2))  )</errorConditionFormula>
        <errorMessage>Interest, Principal, Fees and Excess must sum up to Transaction amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Not_Write_Off_Recovery_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; 
NOT(TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Closed- Written Off&apos;) &amp;&amp;
 loan__Write_Off_Recovery_Payment__c</errorConditionFormula>
        <errorMessage>This is not a written off loan. Please uncheck the &apos;Write off Recovery&apos; option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Transaction_Amount_Validation</fullName>
        <active>false</active>
        <description>With the addition of &apos;Excess&apos; functionality, this validation is deprecated and not maintained.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; (ROUND(loan__Transaction_Amount__c,2)   &gt;   ROUND(loan__Loan_Account__r.loan__Pay_Off_Amount_As_Of_Today__c,2))</errorConditionFormula>
        <errorDisplayField>loan__Transaction_Amount__c</errorDisplayField>
        <errorMessage>Transaction Amount can not be greater than payoff amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Transaction_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(loan__Transaction_Date__c &gt;  $User.loan__Current_Branch_s_System_Date__c  ,  NOT(loan__Skip_Validation__c), ISNEW())</errorConditionFormula>
        <errorMessage>Transaction/Receipt date cannot be greater than system date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Write_Off_Recovery_Amount_Check</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Closed- Written Off&apos; &amp;&amp;
( loan__Transaction_Amount__c &gt; loan__Loan_Account__r.loan__Principal_Remaining__c ) &amp;&amp;
ISNEW()</errorConditionFormula>
        <errorMessage>The Recovery Amount is greater than Principal Remaining.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Write_Off_Recovery_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; 
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Closed- Written Off&apos; &amp;&amp;
 NOT(loan__Write_Off_Recovery_Payment__c)</errorConditionFormula>
        <errorMessage>This is a written off loan. You will have to select the Write Off Recovery Payment option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Zero_Txn_Amount_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ROUND(loan__Transaction_Amount__c,2) &lt;= 0</errorConditionFormula>
        <errorMessage>Transaction amount should be greater than zero.</errorMessage>
    </validationRules>
</CustomObject>